syntax = "proto3";

option java_multiple_files = true;
option java_package = "itx.backupng.server.grpc";
option java_outer_classname = "BackupSpaceNGPoto";
option objc_class_prefix = "HLW";

service BackupService {

    rpc GetVersion (EmptyMessage) returns (VersionReply) {}

    rpc DataChannel (stream WrapperRequest) returns (stream WrapperResponse) {}

}

message EmptyMessage {}

message VersionReply {
    string version = 1;
}

message DataException {
    string message = 1;
}

message WrapperRequest {
    int64 contextId = 1;
    oneof data {
        DiskInfoRequest diskInfoRequest = 2;
    }
}

message WrapperResponse {
    int64 contextId = 1;
    DataException dataException = 2;
    oneof data {
        DiskInfoResponse diskInfoResponse = 3;
    }
}

message DiskInfoRequest {
}

message PartitionInfo {
    string id = 1;
    string uuid = 2;
}

message DiskInfo {
    string id = 1;
    repeated PartitionInfo partitionInfo = 2;
}

message DiskInfoResponse {
    repeated DiskInfo diskInfo = 1;
}

